--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,7 @@ title: Pages
 <ul>
 {% for p in site.pages %}
     {% unless p.url == page.url %}
-    <li><a href="{{ p.url }}">{{ p.title }}</a></li>
+    <li><a href="{{ site.baseurl }}/{{ p.url }}">{{ p.title }}</a></li>
     {% endunless %}
 {% endfor %}
 </ul>
